# computer-graphic

./: backup.cpp
latest_version/: Button.h  LevelRenderer.h
lb1/: .gitignore
lb2/: CMakeLists.txt  draw rect.cpp  main.cpp  main_cb.cpp
lb2 cb/: lb2 cb.cbp  lb2 cb.layout  main.c
lb3/: Button.h  CMakeLists.txt  Character.h  main.cpp  text_renderer.h
lb3/backups/: backup 2.cpp  backup 4.cpp  backup 5 (working prototype).cpp  backup 6.cpp  backup.cpp
lb4/: CMakeLists.txt  main.cpp  spritelist.psd  text_renderer.cpp
lb5/: CMakeLists.txt  camera.cpp  camera.h  lb5.cbp  lb5.depend  lb5.layout  main.cpp
lb5/codeblocks/: camera.cpp  camera.h  lb5.cbp  lb5.depend  main.cpp
lb5/codeblocks/simplegl-master/: Camera.cpp  Camera.h  Engine.h  Lens.h  Object.h  Point.cpp  Point.h  Scene.cpp  StateMachine.cpp  StateMachine.h  Toggler.h  Tool.h  Transformable.h  Viewport.cpp  Viewport.h
lb5/codeblocks/simplegl-master/lens/: FirstPersonLens.cpp  OrthogonalLens.h  PerspectiveLens.cpp  PerspectiveLens.h
lb5/codeblocks/simplegl-master/nbproject/: Makefile-Debug.mk  Makefile-impl.mk  project.xml
lb5/codeblocks/simplegl-master/objects/: Model.cpp  Plane.cpp  Plane.h  Snowman.h  Sphere.h  Triangle.h  Wall.cpp  Wall.h
lb5/codeblocks/simplegl-master/states/: BackgroundSelector.cpp  BackgroundSelector.h  TriangleSelector.h
lb5/codeblocks/simplegl-master/togglers/: Teleporter.cpp
lb5/codeblocks/simplegl-master/tools/: InspectTool.cpp  InspectTool.h  MoveTool.h  NavigationTool.cpp
lb5/codeblocks/simplegl-master/utils/: math.cpp
lb5/simplegl-master/: Color.cpp  Color.h  Engine.cpp  Lens.cpp  Object.cpp  Scene.h  State.cpp  State.h  Toggler.cpp  Tool.cpp  Transformable.cpp
lb5/simplegl-master/lens/: FirstPersonLens.h  OrthogonalLens.cpp
lb5/simplegl-master/nbproject/: Makefile-Release.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml
lb5/simplegl-master/objects/: Cone.cpp  Cone.h  Light.cpp  Light.h  Model.h  Snowman.cpp  Sphere.cpp  Teapot.cpp  Teapot.h  Triangle.cpp
lb5/simplegl-master/states/: TriangleSelector.cpp
lb5/simplegl-master/togglers/: Teleporter.h
lb5/simplegl-master/tools/: MoveTool.cpp  NavigationTool.h
lb5/simplegl-master/utils/: math.h
lb6/: CMakeLists.txt  camera.cpp  camera.h  main.cpp
lb7/: CMakeLists.txt  camera.h  main.cpp
